# ecommerce-logistics-diagnostics

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  catalog.json  index.html  manifest.json  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: Data_Analyst.agent.md
.github/prompts/: enterprise_docstring.prompt.md  executive_chart.prompt.md  pandera_contract.prompt.md
.github/workflows/: lint.yml
notebooks/: 01_logistics_root_cause_diagnostics.ipynb
src/: __init__.py  data_contracts.py  db_connection.py  diagnostic_utils.py
